# vanir

./: .bazeliskrc  .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  detector_common_flags.py  detector_common_flags_test.py  detector_runner.py  detector_runner_test.py  exact_target_file_match_only_signatures_internal.json  extensions.bzl  file_list_manager.py  hasher.py  hasher_test.py  normalizer.py  overwrite_specs_validity_test.py  parser.py  parser_test.py  pyproject.toml  refiner.py  refiner_test.py  reporter_test.py  repositories.bzl  requirements.txt  requirements_antlr4_lock.txt  requirements_lock.txt  sign_generator.py  sign_generator_runner.py  sign_generator_runner_test.py  sign_generator_test.py  signature.py  signature_test.py  version_extractor.py  version_extractor_test.py  vulnerability.py  vulnerability_manager.py  vulnerability_manager_test.py  vulnerability_overwriter_test.py
cache/: BUILD.bazel  ecosystem_file_lists.json
code_extractors/: BUILD.bazel  code_extractor.py  code_extractor_android.py  code_extractor_android_test.py  code_extractor_base.py
integration_tests/: BUILD.bazel  missing_patch_detection_hermetic_test.py
language_parsers/: BUILD.bazel  abstract_language_parser.py
language_parsers/cpp/: BUILD.bazel  cpp_parser_test.py  parser_core.cc
language_parsers/cpp/python/: BUILD.bazel  parser_core.cc
language_parsers/java/: BUILD.bazel  antlr4.external.bzl  parser_core.cc  parser_core.h
language_parsers/java/python/: BUILD.bazel  parser_core.cc
requirements/: BUILD.bazel  README.md  requirements.txt  requirements_antlr4.txt  requirements_antlr4_lock_3.10.txt  requirements_antlr4_lock_3.11.txt  requirements_antlr4_lock_3.12.txt  requirements_antlr4_lock_3.13.txt  requirements_antlr4_lock_3.9.txt  requirements_lock_3.10.txt  requirements_lock_3.11.txt  requirements_lock_3.12.txt  requirements_lock_3.13.txt  requirements_lock_3.9.txt
scanners/: BUILD.bazel  android_kernel_scanner.py  android_kernel_scanner_test.py  offline_directory_scanner.py  offline_directory_scanner_test.py  package_identifier.py  package_identifier_test.py  package_scanner.py  package_scanner_test.py  repo_scanner.py  repo_scanner_test.py  scanner_base.py  scanner_base_test.py  target_selection_strategy.py
testdata/: BUILD.bazel  test_patch_file  test_patched_file  test_signatures.py  test_unpatched_file  test_vulnerabilities_kernel.json
testdata/gitiles/: b2dc041a4e84986e3a6932b127d3a18ef02b6d0a_services_core_java_com_android_server_om_OverlayManagerService.java.base64
vanir/: detector_common_flags.py  detector_common_flags_test.py  detector_runner.py  detector_runner_test.py  file_list_manager.py  file_list_manager_test.py  file_path_utils.py  normalizer_test.py  osv_client.py  overwrite_specs_validity_test.py  parser.py  refiner.py  refiner_test.py  reporter.py  sign_generator.py  sign_generator_runner.py  sign_generator_runner_test.py  sign_generator_test.py  signature.py  signature_test.py  truncated_path.py  truncated_path_test.py  vanir_test_base.py  vulnerability.py  vulnerability_manager.py  vulnerability_manager_test.py  vulnerability_overwriter.py  vulnerability_overwriter_test.py  vulnerability_test.py
vanir/cache/: BUILD.bazel  ecosystem_file_lists.py
vanir/code_extractors/: BUILD.bazel  code_extractor.py  code_extractor_android.py  code_extractor_android_test.py  code_extractor_base.py  code_extractor_git.py  code_extractor_git_test.py  code_extractor_test.py  git_commit.py  git_commit_test.py  gitiles_commit.py  gitiles_commit_test.py  gob_commit.py  qualcomm_commit.py  qualcomm_commit_test.py
vanir/integration_tests/: BUILD.bazel  missing_patch_detection_hermetic_test.py
vanir/language_parsers/: BUILD.bazel  common.py  language_parsers.py
vanir/language_parsers/cpp/: BUILD.bazel  cpp_parser.py  parser_core.cc  parser_core.h
vanir/language_parsers/cpp/python/: BUILD.bazel  parser_core.cc
vanir/language_parsers/java/: BUILD.bazel  antlr4.external.bzl  java_parser.py  java_parser_test.py  parser_core.cc  parser_core.h
vanir/language_parsers/java/python/: BUILD.bazel  parser_core.cc
vanir/pip_modules/: README.md  build_pip_package.py  pip_test_runner.py  pybind_extension_importer.py  pybind_extension_importer_test.py
vanir/scanners/: BUILD.bazel  android_kernel_scanner.py  android_kernel_scanner_test.py  offline_directory_scanner.py  offline_directory_scanner_test.py  package_identifier_test.py  package_scanner.py  package_scanner_test.py  repo_scanner.py  repo_scanner_test.py  scanner_base.py  scanner_base_test.py  target_selection_strategy.py  target_selection_strategy_test.py
vanir/testdata/: BUILD.bazel  test_overwrite_specs.json  test_patch_file  test_signatures.json  test_unrelated_file  test_vulnerabilities_platform.json
vanir/testdata/gitiles/: c3c9ada6e5d946ce7d224649f1d6528ce80b1a24_services_core_java_com_android_server_om_OverlayManagerService.java.base64
